[package]
name = "memscanner_derive"
version = "0.1.0"
authors = ["Cid.Garlond <cid.garlond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "memscanner_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = { version = "1.0.1", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits"]}
