[package]
name = "memscanner_test"
version = "0.1.0"
authors = ["Cid.Garlond <cid.garlond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
memscanner = {version = "0.1.0", path = "../memscanner"}
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "1.0", features = ["derive"] }
